# bandstat

./: Cargo.toml  LICENSE  README.ja.md  README.md
.github/workflows/: release.yml
src/: analysis.rs  audio.rs  chart.rs  main.rs  output.rs
src/analysis/: bands.rs  fft.rs  kweight.rs  mod.rs  tests.rs
src/chart/: colors.rs  comparison.rs  mod.rs  stacked.rs
src/mode/: compare.rs  mod.rs  stats.rs  timeline.rs
test_data/: 1khz.flac  README.md  verify.sh
tests/: integration.rs
tests/common/: mod.rs
