[package]
name = "bandstat"
version = "0.2.0"
edition = "2024"
description = "Audio frequency band analyzer for comparing mixes against reference tracks"
authors = ["cloned"]
license = "MIT"

[dependencies]
symphonia = { version = "0.5", features = ["aiff", "wav", "pcm", "mp3", "flac"] }
rustfft = "6.2"
rubato = "0.16"
clap = { version = "4", features = ["derive"] }
colored = "2"
charming = { version = "0.4", features = ["ssr"] }

[dev-dependencies]
tempfile = "3.24.0"
